# betstream

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  manual-betting-server.db  package-lock.json
betting-frontend/: Caddyfile  Dockerfile  nginx.conf  package-lock.json  package.json
betting-frontend/public/: index.html
betting-frontend/src/: App.js  index.css
betting-frontend/src/api/: accounts.js  batches.js
betting-frontend/src/components/: AccountList.js  AccountSSEListener.js
caddy/: Caddyfile
data/: seed.sh
migrations/: 001_create_accounts.sql
src/: main.rs
src/handlers/: accounts.rs
src/models/: account.rs
